WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258280
[WGSL] Type checker crashes when calling a non-existing function
https://bugs.webkit.org/show_bug.cgi?id=258280
Summary
[WGSL] Type checker crashes when calling a non-existing function
Tadeu Zagallo
Reported
2023-06-19 08:53:11 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-06-19 08:53:22 PDT
<
rdar://problem/111003956
>
Tadeu Zagallo
Comment 2
2023-06-19 09:03:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15094
EWS
Comment 3
2023-06-19 18:33:44 PDT
Committed
265312@main
(d552f3bf1512): <
https://commits.webkit.org/265312@main
> Reviewed commits have been landed. Closing PR #15094 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug